# Hero-of-Allacrost

./: .hgignore  README.md
demo/: AUTHORS  Allacrost.cbp  Allacrost.depend  Allacrost.layout  Allacrost.sln  Allacrost.vcproj  MANUAL  Makefile.am  Makefile.in  Map_Editor.cbp  Map_Editor.depend  Map_Editor.layout  Map_Editor.vcproj  README  aclocal.m4  allacrost.workspace  configure  configure.ac  map_zones.h
demo/HoA.xcodeproj/: alistairlynn.mode1  alistairlynn.pbxuser  philip.mode1  philip.pbxuser  project.pbxproj
demo/HoA.xcodeproj/.AppleDouble/: .Parent  alistairlynn.mode1  alistairlynn.pbxuser  project.pbxproj
demo/allacrost.xcodeproj/: svn-commit.tmp
demo/dat/: armor.lua  battle_events.lua  credits.lua  global.lua  items.lua  weapons.lua
demo/dat/actors/: characters.lua  enemies_set_01.lua  enemies_set_02.lua  map_sprites_stock.lua
demo/dat/config/: boot.lua  languages.lua  restore_settings.lua  settings.lua
demo/dat/effects/: status.lua
demo/dat/enemies/: green_slime.lua  skeleton.lua  snake.lua  spider.lua
demo/dat/maps/: betrayal_room.lua  demo_cave.lua  demo_town.lua  desert_barracks.lua  desert_cave.lua  desert_outskirts.lua  desert_training.lua  desert_village.lua  new_cave.lua  opening_scene.lua
demo/dat/maps/sprites/: laila.lua  scorpion.lua
demo/dat/objects/: arm_armor.lua  armor.lua  head_armor.lua  items.lua  leg_armor.lua  torso_armor.lua  weapons.lua
demo/dat/skills/: attack.lua  defense.lua  support.lua  sword_swipe.lua
demo/dat/tilesets/: autotiling.lua  desert_cave.lua  desert_cave_ground.lua  desert_cave_walls.lua  desert_cave_walls2.lua  desert_cave_water.lua  desert_ground.lua  harrvah_house.lua  mountain_house_exterior.lua  mountain_house_exterior2.lua  mountain_house_interior.lua  mountain_landscape.lua
demo/img/portraits/battle/: claudius.png.bak  claudius_hp00.png.bak  claudius_hp25.png.bak  claudius_hp50.png.bak  claudius_hp75.png.bak
demo/m4/: qt.m4
demo/src/: SDLMain.m  defs.cpp  defs.h  main.cpp  main_options.cpp  main_options.h  utils.cpp  utils.h
demo/src/common/global/: defs_global.cpp  global.cpp  global_actors.cpp  global_actors.h  global_effects.cpp  global_effects.h  global_objects.cpp  global_objects.h  global_skills.cpp  global_skills.h  global_utils.cpp  global_utils.h
demo/src/common/gui/: gui.cpp  gui.h  option.cpp  option.h  textbox.cpp
demo/src/editor/: dialog_boxes.cpp  dialog_boxes.h  editor.cpp  editor.h  editor_main.cpp  grid.cpp  grid.h  skill_editor.cpp  skill_editor.h  sprites.cpp  sprites.h  tile.cpp  tile.h  tileset.cpp  tileset.h  tileset_editor.cpp  tileset_editor.h
demo/src/engine/: data.cpp  data.h  defs_engine.cpp  global.cpp  global.h  input.cpp  input.h  mode_manager.cpp  mode_manager.h  script.cpp  script.h  socket.cpp  socket.h  system.cpp  system.h
demo/src/engine/audio/: audio.cpp  audio.h  audio_descriptor.cpp  audio_descriptor.h  audio_effects.cpp  audio_effects.h  audio_fx.cpp  audio_fx.h  audio_input.cpp  audio_input.h  audio_music.cpp  audio_music.h  audio_sound.cpp  audio_sound.h  audio_stream.cpp  audio_stream.h
demo/src/engine/script/: script.cpp  script.h  script_modify.cpp  script_modify.h  script_read.cpp  script_read.h  script_write.cpp  script_write.h
demo/src/engine/video/: color.h  context.h  coord_sys.h  draw.cpp  effects.cpp  fade.cpp  fade.h  gui.cpp  gui.h  image.cpp  image.h  image_base.cpp  image_base.h  interpolator.cpp  interpolator.h  option.h  (+27 more)
demo/src/global/: defs_global.cpp  global.cpp  global.h  global_actors.cpp  global_actors.h  global_effects.cpp  global_effects.h  global_objects.cpp  global_objects.h  global_skills.cpp  global_skills.h
demo/src/modes/: defs_modes.cpp  pause.cpp  pause.h  quit.cpp  quit.h  scene.cpp  scene.h
demo/src/test/: test_main.cpp  test_main.h
demo/txt/: LINGUAS  Makevars  POTFILES.in  allacrost.pot  build_mo_linux.sh  de.po  en@quot.po  es.po  fr.po  pt_BR.po
module_00/: Allacrost.sln  Allacrost.vcproj  MANUAL  Makefile  Makefile.am  Makefile.in  Map_Editor.vcproj  README  config.h.in  configure  configure.ac  icon.rc
module_00/dat/config/: boot.lua  settings.lua
module_00/dat/enemies/: skeleton.lua  slime.lua  snake.lua  spider.lua
module_00/dat/maps/: desert_cave.lua  test_01.lua
module_00/dat/skills/: sword_swipe.lua
module_00/src/: audio.cpp  audio.h  audio_music.cpp  audio_music.h  audio_sound.cpp  audio_sound.h  battle.cpp  battle.h  battle_actions.cpp  battle_actions.h  boot.cpp  boot.h  boot_menu.cpp  boot_menu.h  data.cpp  data.h  data_bind.h  defs.h  engine.cpp  engine.h  global.cpp  global.h  loader.cpp  main.cpp  main_options.cpp  map.cpp  map.h  map_actions.cpp  map_actions.h  map_dialogue.cpp  map_dialogue.h  map_objects.cpp  map_objects.h  menu.cpp  menu.h  menu_views.cpp  menu_views.h  pause.cpp  pause.h  quit.cpp  (+5 more)
module_00/src/Hero Of Allacrost.xcodeproj/: project.pbxproj  shad0an.mode1  shad0an.pbxuser
module_00/src/allacrost.xcodeproj/: shad0an.mode1  shad0an.pbxuser
module_00/src/editor/: editor.cpp  editor.h  grid.cpp  grid.h  tile.h  tileset.cpp  tileset.h
module_00/src/engine/: data.cpp  data.h  data_bind.h  global.cpp  global.h  input.cpp  input.h  mode_manager.cpp  settings.cpp  settings.h  system.h
module_00/src/map_editor/: Makefile  editor.cpp  editor.h  editor_main.cpp  grid.cpp  grid.h  hoa_map_editor.cpp  map.cpp  map.h  map_editor.cpp  map_editor.h  map_editor.pro  map_grid.cpp  map_grid.h  tile.cpp  tile.h  tileset.cpp  tileset.h
module_00/src/modes/: pause.cpp  pause.h  quit.cpp  quit.h  scene.cpp
module_00/src/video/: color.cpp  color.h  context.h  coord_sys.cpp  coord_sys.h  directory.cpp  draw.cpp  effects.cpp  fade.cpp  fade.h  font.cpp  gui.cpp  gui.h  image.cpp  image.h  images.cpp  images.h  interpolator.cpp  interpolator.h  menu_window.cpp  menu_window.h  option.cpp  option.h  ortho.cpp  ortho.h  particle.h  particle_effect.cpp  particle_effect.h  particle_emitter.h  particle_keyframe.h  particle_manager.cpp  particle_manager.h  particle_system.cpp  particle_system.h  primative.cpp  primative.h  screen_rect.h  shake.cpp  shake.h  simpletext.cpp  (+12 more)
(+453 files in other folders)
